# fastai_minima

./: .coveragerc  .pre-commit-config.yaml  CHANGELOG.md  mkdocs.yml  pyproject.toml
.github/workflows/: pull_request.yml  test_and_release.yml
docs/: index.md
fastai_minima/: learner.py  metrics.py  optimizer.py  utils.py
fastai_minima/callback/: core.py  training.py  training_utils.py
tests/: test_import.py  test_utils.py
