[tool.poetry]
name = "fastai_minima"
version = "0.1.1"
description = "minimal fastai"
authors = ["Zachary Mueller", "Jeremy Howard", "Sylvain Gugger", "scart97",  "and contributors"]
license = "apache2"
readme = "README.md"
keywords = ["python", "pytorch", "fastai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
	"Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
include = [
    "README.md",
    "LICENSE.txt"
]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
torch = ">=1.7,<1.10"
numpy = "^1.20.3"
scikit-learn = "^0.24.2"
pandas = "^1.2.4"
matplotlib = "^3.4.2"
fastprogress = "^1.0.0"
fastcore = "^1.3.20"
importlib-metadata = "^4.6.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"
commitizen = "^2.17.9"
mkdocs = "^1.2.1"
mkdocs-material = "^7.1.8"
mkdocstrings = "^0.15.2"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
hypothesis = "^6.39.3"
black = {version = "^21.6b0", allow-prereleases = true}
hypothesis-gufunc = "^0.0.6"

[tool.commitizen]
name = "cz_conventional_commits"

[tool.semantic_release]
version_toml = "pyproject.toml:tool.poetry.version"
branch = "master"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov fastai_minima --cov-report term-missing --verbose"
testpaths = [
    "tests",
]
norecursedirs = [
    "dist",
    "build"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
